deploy/core/mongo/mongodb-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-client
  name: mongo-client
  namespace: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-client
  template:
    metadata:
      labels:
        app: mongo-client
    spec:
      nodeSelector:
        kubernetes.io/hostname: blackbox
      containers:
      - image: mongo
        name: mongo-client
