deploy/core/mongo/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo-svc
  namespace: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongo-express-svc
  namespace: mongo
spec:
  type: NodePort
  selector:
    app: mongo
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      nodePort: 32000
